--- a/ansible/roles/api/templates/Caddyfile
+++ b/ansible/roles/api/templates/Caddyfile
@@ -1,6 +1,5 @@
 :80 {
-  reverse_proxy /* localhost:{{ snow_plowing_service_port }}
-  reverse_proxy /geocoder/* localhost:{{ geocoder_port }} {
+  reverse_proxy /* localhost:{{ snow_plow_service_port }} {
     header_down Access-Control-Allow-Origin *
   }
 }
