--- a/ansible/roles/api/templates/systemd/snow-plowing.service
+++ b/ansible/roles/api/templates/systemd/snow-plowing.service
@@ -11,13 +11,13 @@ ExecStartPre=-podman stop --ignore %n
 ExecStartPre=-podman rm %n
 
 #ExecStartPre=-send-to-matrix "🔁 Starting OTP on {{ server_name }}"
-ExecStartPre=-podman pull {{ snow_plowing_service_image }}
+ExecStartPre=-podman pull {{ snow_plow_service_image }}
 
 ExecStart=podman run \
     --name %n \
-    --rm -p {{ snow_plowing_service_port }}:8080 \
+    --rm -p {{ snow_plow_service_port }}:8080 \
     -e JAVA_OPTS="-Xmx4G" \
-    {{ snow_plowing_service_image }} --load --serve
+    {{ snow_plow_service_image }} --load --serve
 
 ExecStop=podman stop --ignore %n
 ExecStop=-podman rm %n
