--- a/ansible/roles/api/templates/Caddyfile
+++ b/ansible/roles/api/templates/Caddyfile
@@ -1,4 +1,4 @@
-:80 {
+cycling-norway.leonard.io {
   reverse_proxy /* localhost:{{ snow_plow_service_port }} {
     header_down Access-Control-Allow-Origin *
   }
