--- a/ansible/roles/api/templates/systemd/snow-plow.service
+++ b/ansible/roles/api/templates/systemd/snow-plow.service
@@ -17,7 +17,7 @@ ExecStart=podman run \
     --name %n \
     --rm -p {{ snow_plow_service_port }}:8080 \
     -e JAVA_OPTS="-Xmx4G" \
-    -e DATA_URL=https://static.public-test.appliedautonomy.no/company/5308356361191424/trails/mobile-trails-20230223-20230225.json \
+    -e DATA_URL=https://static.public.appliedautonomy.no/company/6138473736044544/trails/mobile-trails-last-status.json \
     {{ snow_plow_service_image }} server
 
 ExecStop=podman stop --ignore %n
