Deploy newest version

--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -13,7 +13,7 @@ users:
 
 server_name: "cycling-norway"
 
-snow_plow_service_image: "ghcr.io/buskerudbyen/snow-plow-service:latest"
+snow_plow_service_image: "ghcr.io/buskerudbyen/snow-plow-service:2023-05-02T11-18"
 
 # Podman
 podman_prune_max_age: 72h
